<resources>
    <string name="app_name">StarterProject</string>
    <string name="key_not_found">Key Not Found</string>
    <string name="npa">Not Playable Ad</string>


    <string name="is_ads_enabled" />
    <string name="exit_app">Exit Application</string>
    <string name="want_to_exit">Do you want to exit the application?</string>
    <string name="banner_ad_id" />
    <string name="no">No</string>
    <string name="yes">Yes</string>


    <string name="banner_ad_unit">	ca-app-pub-3940256099942544/6300978111 </string>
    <string name="interstitial_ad_id"> ca-app-pub-3940256099942544/1033173712 </string>
    <string name="native_ad_unit">ca-app-pub-3940256099942544/2247696110 </string>
    <string name="main_activity_title">Muscle Fitness</string>
    <string name="ad">AD</string>
    <string name="alarm">ALARM</string>
    <string name="hour">HOUR</string>
    <string name="minute">MINUTES</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="abs">Abs</string>
    <string name="arms">Arms</string>
    <string name="back">Back</string>
    <string name="shoulders">Shoulders</string>
    <string name="legs">Legs</string>
    <string name="chest">Chest</string>
    <string name="hips">Hips</string>
    <string name="buttocks">Buttocks</string>
    <string name="show_target_muscle_training">Show Target Muscle Training</string>
</resources>
