<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:minWidth="@dimen/_250sdp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_rounded_primary" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/exit_app"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/want_to_exit"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_id" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dialog_btn_negative"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:background="@android:color/white"
                android:text="@string/no"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/dialog_btn_positive"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@android:color/black"
                android:text="@string/yes"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
